fix: admin table modals align buttons + resize icons

--- a/src/components/AdminLayout/_components/AdminTable/AdminTable-styles.less
+++ b/src/components/AdminLayout/_components/AdminTable/AdminTable-styles.less
@@ -12,3 +12,10 @@
 		}
 	}
 }
+
+.approve-icon,
+.deactivate-icon,
+.delete-icon {
+	margin-top: 2px;
+	margin-right: calc(var(--ant-margin-sm) / 2);
+}
